Project3_OPA/deny-bad-ns-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenybaddemo
spec:
  crd:
    spec:
      names:
        kind: K8sDenyBadDemo
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenybaddemo
        violation[{"msg": "namespace name 'bad' is not allowed"}] {
          input.review.kind.kind == "Namespace"
          input.review.object.metadata.name == "bad"
        }


# kubectl apply -f deny-bad-ns-template.yaml
